--- a/Salsa.cabal
+++ b/Salsa.cabal
@@ -1,7 +1,7 @@
 Cabal-Version:  >= 1.10
 
 Name:           Salsa
-Version:        0.2.0.0
+Version:        0.2.0.1
 Build-Type:     Simple
 
 Category:       Foreign, .NET
@@ -72,8 +72,6 @@ Library
 
   Other-Modules:
       Foreign.Salsa.CLR,
-      Foreign.Salsa.Mono.CLRHost,
-      Foreign.Salsa.Win.CLRHost,
       Foreign.Salsa.Common,
       Foreign.Salsa.Core,
       Foreign.Salsa.Resolver,
@@ -81,6 +79,9 @@ Library
       Foreign.Salsa.Driver
 
   if !os(windows) || flag(use_mono)
+  
+    Other-Modules:
+      Foreign.Salsa.Mono.CLRHost
 
     Build-Depends: base==4.*, bytestring, file-embed
 
@@ -90,6 +91,9 @@ Library
     Extra-Libraries: glib-2.0, mono-2.0
 
   else
+
+    Other-Modules:
+      Foreign.Salsa.Win.CLRHost
 
     Build-Depends: base==4.*, Win32, bytestring, file-embed
 
